--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SAGE: Coming Soon</title>
-	<!-- Google fonts-->
-	<link href='https://fonts.googleapis.com/css?family=Teko:400,300|Titillium+Web:300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Teko:300,400|Titillium+Web:300" rel="stylesheet">
 	<script src="https://use.fontawesome.com/bfc0c7d9fb.js"></script>
 </head>
 <body>
 	<Header>
-		<img src=" ">
+		<img src="" alt="">
 		<nav> </nav>
 	</Header>
 	<main>
